istiofiles/01.simple.routing/03.virtual-service-recommendation-v1.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation-vs
spec:
  hosts:
  #This is the service of the recommendation
  - recommendation-svc
  http:
  - route:
    - destination:
        #This is the service of the recommendation
        host: recommendation-svc
        subset: version-v1
      weight: 100
